--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 #root {
-  max-width: 1280px;
+  max-width: 80%;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
